platform/adguard/prod/ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ui
  namespace: edge
spec:
  ingressClassName: tailscale
  defaultBackend:
    service: { name: adguard-ui, port: { number: 80 } }
  tls:
    - hosts: ["adguard"] # adguard.<tailnet>.ts.net
